WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97132
Some media/track tests fail or assert on Mac
https://bugs.webkit.org/show_bug.cgi?id=97132
Summary
Some media/track tests fail or assert on Mac
Simon Fraser (smfr)
Reported
2012-09-19 13:43:18 PDT
I'm unskipping media/track, but skipping: media/track/track-cue-rendering-horizontal.html media/track/track-cue-rendering-snap-to-lines-not-set.html media/track/track-cue-rendering-vertical.html media/track/track-webvtt-tc028-unsupported-markup.html
Attachments
Patch
(202.65 KB, patch)
2013-05-16 16:50 PDT
,
Jer Noble
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-05-16 16:50:55 PDT
Created
attachment 202002
[details]
Patch
Jer Noble
Comment 2
2013-05-17 08:29:39 PDT
Committed
r150260
: <
http://trac.webkit.org/changeset/150260
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug